fix: change paragraph spacing text overflow images height

--- a/about.css
+++ b/about.css
@@ -134,7 +134,7 @@ a{
     font-size: 1.1rem;
     font-family: VisbySemibold;
     line-height: 1.5;
-    padding: 1rem 0px;
+    padding: 0.6rem 0px;
 }
 .section p:last-child{
     padding: 0px 0px 120px 0px;
@@ -166,7 +166,7 @@ a{
 }
 
 .fifth-part{
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -178,7 +178,7 @@ a{
 }
 .fifth-part article section{
     width: 50%;
-    height: 95vh;
+    height: 45rem;
     justify-items: flex-start;
     align-content: center;
 }
@@ -463,17 +463,17 @@ a{
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    height: 40vh;
-    width: 100vw;
+    height: 18rem;
     padding: 0 vw;
 }
-.ten-part>div{
+.ten-part div{
     font-size: 2rem;
-    width: 20%;
     
 }
 .signup-form{
-    width: 65%;
+    width: 80%;
+    display: flex;
+    flex-direction: row;
 }
 .signup-form>input{
     color: #fff;
@@ -493,10 +493,13 @@ a{
     box-shadow: none;
     color: #fff;
     border: 3px solid #fff;
-    padding: 1.5rem 3rem;
+    padding: 1.2rem 2.5rem;
     border-radius: 6rem;
-    font-size: 1rem;
+    font-size: 1.4rem;
+    font-weight: 900;
+    font-family: VisbyRegular;
     align-self: baseline;
+    white-space: nowrap;
 }
 ::placeholder{
     color: #fff;
@@ -686,7 +689,7 @@ a{
     }
     .fifth-part article section {
         width: 100%;
-        height: 60vh;
+        /* height: 60vh; */
     }
     .six-part>h3 {
         padding: 2rem 0;
@@ -704,6 +707,9 @@ a{
     .img-4{
         width: auto;
         height: 80vw;
+    }
+    .paragraph {
+        padding: 4vw;
     }
     .paragraph-2 {
         padding-top: 5vh;
@@ -738,8 +744,9 @@ a{
         height: 50vh;
     }
     .ten-part>div {
-        width: 100%;
+        width: 90%;
         text-align: center;
+        margin: 0 auto;
     }
     .signup-form{
         display: flex;
